--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formo/analytics": "^1.20.0",
+    "@tanstack/react-query": "^4.41.0",
     "@thirdweb-dev/react": "^4",
     "@thirdweb-dev/sdk": "^4",
     "@thirdweb-dev/wallets": "^2",
